--- a/n8n/packages/frontend/editor-ui/index.html
+++ b/n8n/packages/frontend/editor-ui/index.html
@@ -6,9 +6,25 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<link rel="icon" href="/favicon.ico" />
 		%CONFIG_TAGS%
-		<link rel="stylesheet" href="/{{BASE_PATH}}/static/prefers-color-scheme.css">
-		<script src="/{{BASE_PATH}}/static/base-path.js" type="text/javascript"></script>
-		<script src="/{{BASE_PATH}}/static/posthog.init.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="/{{BASE_PATH}}/static/prefers-color-scheme.css" />
+		<script type="module">
+			// Mirror logic from the legacy base-path/posthog bootstrap files without making Vite resolve the assets.
+			window.BASE_PATH = '/{{BASE_PATH}}/';
+			const withBase = (relative) => {
+				const base = window.BASE_PATH ?? '/';
+				const normalizedBase = base.endsWith('/') && base !== '/' ? base.slice(0, -1) : base;
+				const normalizedPath = relative.startsWith('/') ? relative : `/${relative}`;
+				return normalizedBase === '/' ? normalizedPath : `${normalizedBase}${normalizedPath}`;
+			};
+			const loadScript = (path) => {
+				const script = document.createElement('script');
+				script.src = withBase(path);
+				script.type = 'text/javascript';
+				script.async = false;
+				document.head.appendChild(script);
+			};
+			loadScript('static/posthog.init.js');
+		</script>
 
 		<title>n8n.io - Workflow Automation</title>
 	</head>
